@@ -546,7 +546,14 @@ public class ManageDocumentsService {
                         docData
                     ))
             );
-            newUploadedDocument = Document.buildFromDocument(uploadResponse.getDocuments().get(0));
+
+            if (uploadResponse == null
+                || uploadResponse.getDocuments() == null
+                || uploadResponse.getDocuments().isEmpty()) {
+                throw new IllegalStateException("Upload returned no documents for id: " + documentId);
+            }
+
+            newUploadedDocument = Document.buildFromDocument(uploadResponse.getDocuments().getFirst());
         } catch (Exception ex) {
             log.error("Failed to upload new document {}", ex.getMessage(), ex);
         }
